# limit-up

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
apps/api/: pyproject.toml
apps/api/luapi/: __init__.py  guard.py  main.py
apps/api/luapi/routers/: arena.py  briefing.py  chat.py  cn.py  jobs.py  journal.py  markets.py  paper.py  portfolio.py  recommendations.py  screener.py  stocks.py  strategy.py  studio.py  sync.py  usage.py  watchlists.py
apps/mcp/: pyproject.toml
apps/mcp/lumcp/: __init__.py  server.py
apps/web/: middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ApiStatus.tsx  Chart.tsx  DeepResearch.tsx  GlobalSearch.tsx  Heatmap.tsx  IconRail.tsx  InsiderFilings.tsx  IntradayChart.tsx  Logo.tsx  ManageWatchlistModal.tsx  MultiLineChart.tsx  Panel.tsx  PortfolioAdvanced.tsx  PortfolioTearsheet.tsx  RightColumn.tsx  Sidebar.tsx  Sparkline.tsx  StatusBar.tsx  StockPage.tsx  SymbolInput.tsx  Terminal.tsx  Topbar.tsx  ValuationPanel.tsx  WatchlistPane.tsx  ui.tsx
apps/web/e2e/: _helpers.ts  calendar.spec.ts  chat.spec.ts  data.spec.ts  discover.spec.ts  home.spec.ts  insiders.spec.ts  journal.spec.ts  limitup.spec.ts  paper.spec.ts  portfolio.spec.ts  recommendations.spec.ts  replay.spec.ts  research.spec.ts  screener.spec.ts  strategy.spec.ts  studio.spec.ts  symbol-input.spec.ts  usage.spec.ts  watchlist.spec.ts
scripts/: init_db.py  start-web.sh  stop-web.sh
(+19 files in other folders)
