[project]
name = "luapi"
version = "0.0.0"
description = "limit-up (LU) local web API — thin FastAPI adapter over lucore."
requires-python = ">=3.12"
dependencies = [
    "lucore",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luapi"]
