[project]
name = "lumcp"
version = "0.0.0"
description = "limit-up (LU) MCP server — exposes LU tools to Claude Desktop/Code, Cursor, and the headless `claude -p` brain."
requires-python = ">=3.12"
dependencies = [
    "lucore",
    "mcp>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lumcp"]
